# Firefly

./: .gitignore  CMakeLists.txt  Game Engine.sln  README.md
Engine/: CMakeLists.txt
Engine/include/: AnimatedSprite.h  animation.h  audio.h  audio_source.h  camera.h  entity.h  gameEngine.h  gameEngine_structs.h  gameObject.h  game_options.h  graphics.h  gui.h  gui_button.h  gui_droplist.h  gui_editbox.h  gui_element.h  gui_panel.h  gui_slider.h  gui_text.h  input.h  lightObject.h  physics.h  rigidbody.h  scene.h  sprite.h  structures.h  variables.h
Engine/source/: AnimatedSprite.cpp  audio.cpp  camera.cpp  entity.cpp  graphics.cpp  gui.cpp  gui_button.cpp  gui_droplist.cpp  gui_element.cpp  input.cpp  rigidbody.cpp  scene.cpp  threadHelper.cpp
Game/: CMakeLists.txt
Game Engine/: AnimatedSprite.cpp  AnimatedSprite.h  Game Engine.vcxproj  Game Engine.vcxproj.filters  audio.cpp  audio.h  audio_object.cpp  audio_object.h  audio_source.h  camera.h  falling_obj_scene.cpp  falling_obj_scene.h  game.cpp  game.h  gameEngine.cpp  gameEngine.h  gameObject.cpp  gameObject.h  game_definitions.h  globals.cpp  globals.h  graphics.cpp  graphics.h  gui.cpp  gui.h  gui_button.cpp  gui_button.h  gui_droplist.cpp  gui_droplist.h  gui_editbox.cpp  gui_editbox.h  gui_element.cpp  gui_panel.cpp  gui_panel.h  gui_slider.cpp  gui_slider.h  gui_text.cpp  input.h  lightObject.cpp  light_scene.cpp  (+18 more)
Game/include/: falling_obj_scene.h  firefly.h  firefly_scene.h  game_def.h  projectile.h
Game/source/: falling_obj_scene.cpp  firefly.cpp  firefly_scene.cpp  light_scene.cpp  main.cpp  projectile.cpp  test_class.cpp
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
include/: AnimatedSprite.h  animation.h  audio.h  audio_source.h  camera.h  engine_exports.h  entity.h  game.h  gameEngine.h  gameEvent.h  gameObject.h  game_options.h  graphics.h  graphics_structs.h  gui.h  gui_button.h  gui_droplist.h  gui_editbox.h  gui_element.h  gui_panel.h  gui_slider.h  gui_text.h  input.h  lightObject.h  physics.h  physics_structs.h  rigidbody.h  scancode.h  scene.h  sprite.h  stdafx.h  structures.h  transform.h  variables.h
source/: AnimatedSprite.cpp  animation.cpp  audio.cpp  audio_source.cpp  camera.cpp  game.cpp  gameEngine.cpp  gameObject.cpp  graphics.cpp  gui.cpp  gui_button.cpp  gui_droplist.cpp  gui_editbox.cpp  gui_panel.cpp  gui_slider.cpp  gui_text.cpp  input.cpp  lightObject.cpp  physics.cpp  platform.cpp  rigidbody.cpp  scene.cpp  sprite.cpp  variables.cpp
